# secretvm-verify

./: .gitignore  CHANGELOG.md  README.md  package-lock.json
.github/workflows/: publish.yml
artifacts_registry/: sev.json  tdx.csv
docs/superpowers/specs/: 2026-06-24-proof-of-cloud-trust-server-design.md
node/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
node/data/: sev.json  tdx.csv  trust_server_peers.txt
node/src/: agent.ts  amd.ts  artifacts.ts  chains.ts  cli.ts  cpu.ts  index.test.ts  index.ts  kdsCache.ts  nvidia.ts  proofOfCloud.ts  rtmr.ts  sevGctx.ts  tdx.ts  types.ts  url.ts  vm.ts  workload.test.ts  workload.ts
python/: README.md  check_vm.py  pyproject.toml
python/src/secretai/attestation/: __init__.py
python/src/secretvm/verify/: __init__.py  _kds_cache.py  agent.py  amd.py  cpu.py  nvidia.py  proof_of_cloud.py  tdx.py  types.py  url.py  vm.py  workload.py
python/src/secretvm/verify/data/: sev.json  tdx.csv
python/tests/: test_attestation.py  test_verification.py
scripts/: fetch_sev_artifacts.py
test-data/: amd_cpu_docker_check_quote.txt  amd_cpu_quote.txt  dstack_docker_compose.yaml  gpu_attest.txt  secretai_cpu_quote.txt
