[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretvm-attestation"
version = "0.1.0"
description = "Attestation verification for Intel TDX, AMD SEV-SNP, and NVIDIA GPU"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
