[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretvm-verify"
version = "0.8.2"
description = "Attestation verification for Intel TDX, AMD SEV-SNP, and NVIDIA GPU"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "cryptography",
    "PyYAML",
    "web3",
    "dcap-qvl>=0.3",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"secretvm.verify" = ["data/*.csv", "data/*.json"]
